--- a/EMTResponseApp/app/build.gradle
+++ b/EMTResponseApp/app/build.gradle
@@ -29,6 +29,9 @@ android {
 }
 
 dependencies {
+    // added dependency for barcode scanner
+    //compile 'me.dm7.barcodescanner:zxing:1.9.8'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
