--- a/CivilianAlertApp/app/build.gradle
+++ b/CivilianAlertApp/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "medical.firstresponse.com.civilianresponseapp"
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,6 +25,17 @@ android {
         cmake {
             path "CMakeLists.txt"
         }
+    }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
     }
 }
 
