--- a/EMTResponseApp/app/src/main/AndroidManifest.xml
+++ b/EMTResponseApp/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ScannerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,8 +24,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ScannerActivity"
-            android:label="@string/title_activity_scanner"
+            android:name=".MainActivity"
+            android:label="Main"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
